Add gifs and pics for fun

--- a/index.html
+++ b/index.html
@@ -40,19 +40,24 @@
         <button type="submit" class="btn btn-success">Submit</button>
       </form>
       <br>
-      <div class="result">
+      <div class="good" class="result">
         <div id="good">
           <h3>RESULT:</h3>
           <p> You're in <b> EXCELLENT </b> condition! Keep doing you fam! </p>
+          <br>
+          <img src="not-stressed.jpg" alt="A guy not stressin'">
         </div>
-        <div id="bad">
+        <div class="bad" id="bad">
           <h3>RESULT:</h3>
           <p> Oh <em>DAMN</em> dude! You stressed out, fam! Here check this link out for some remedies to calm down.</p>
           <a href="https://www.wikihow.com/Reduce-Stress"> How to Reduce Stress</a>
+          <br>
+          <img src="stressed-kid.jpg" alt="Stressing kid">
         </div>
-        <div id="bye">
+        <div class="bye" id="bye">
           <h3>RESULT:</h3>
           <p> You should probably go see an expert. There's no way I can help you. My bad, dawg. </p>
+          <br>
           <img src="dabhang.gif" alt="DAB AND HANG">
         </div>
       </div>
